# Virtual-File-System

./: Block.cpp  Block.h  CMakeLists.txt  Directory.cpp  Directory.h  File.cpp  File.h  README.md  blocksAllocation.cpp  blocksAllocation.h  contiguousAllocation.cpp  contiguousAllocation.h  freeSpaceManager.cpp  freeSpaceManager.h  indexedAllocation.cpp  indexedAllocation.h  linkedAllocation.cpp  linkedAllocation.h  main.cpp  virtualFileSystem.cpp  virtualFileSystem.h
